<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Lab 8</string>
    <string name="hello_message">Here are my widgets:</string>
    <string name="buttonText">BUTTON</string>
    <string name="checkButton">Check this out!</string>
    <string name="switchButton">Switch on/off</string>
    <string name="TextSpace">Type your answer in here</string>
    <string name="send">SEND</string>
    <string name="receive">RECEIVE</string>
    <string name="image">Image</string>
    <string name="Edit_hint">Type here</string>
    <string name="textView">Text View</string>
    <string name="emailText">Enter your email address:</string>
    <string name="emailHint">Type your email here</string>
    <string name="passHint">Type your password:</string>
    <string name="loginButton">LOGIN</string>
    <string name="delButton">DELETE THIS MESSAGE</string>
    <string name="idTextV">ID =</string>
    <string name="message">Message here:</string>
</resources>