<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="4">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:text="@string/hello_message"
        android:textSize="30dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="141dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/buttonText" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="253dp"
        android:layout_height="61dp"
        android:layout_row="1"
        android:layout_column="1"
        android:background="?attr/colorButtonNormal"
        app:srcCompat="@drawable/flag" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/checkButton" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="257dp"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:text="@string/switchButton" />

    <EditText
        android:id="@+id/autoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:hint="@string/TextSpace"
        android:inputType="textPersonName" />

</GridLayout>